# sentiment-analyzer-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE.md  NOTICE.md  README.md  env.py  main.py  pyproject.toml
.kilocode/: mcp.json
BaseLLM/: __init__.py  _registry.py  adapter.py  copilot_adapter.py  genai_adapter.py  main.py  ollama_adapter.py  openai_adapter.py
ForTesting/: Checking.ipynb  browsertest.py  camoufox_agentic_smoke.py  sentiment_gpu_smoke.py
ForTesting/agents/: planner_and_harvester.py  planner_via_orchestrator_cli.py
Interface/: README.md  package.json
Interface/scripts/: patch-victory-vendor.js
Interface/src/: frontend.tsx  index.html  router.tsx
Logging/: __init__.py
SentimentAnalyzer/: __init__.py  _registry.py  adapter.py  huggingface_adapter.py  main.py
agents/: __init__.py  _registry.py  base.py
agents/cleaner/: __init__.py  agent.py  models.py  planner.py  recovery.py
agents/harvester/: __init__.py  agent.py  models.py
agents/orchestrator/: __init__.py  agent.py
agents/planner/: __init__.py  agent.py
agents/scraper/: __init__.py  agent.py  models.py  recovery.py
agents/sentiment/: __init__.py  agent.py  models.py  planner.py  recovery.py
agents/services/: __init__.py  cleaner_store.py  cleaner_text.py  document_store.py  harvester_sources.py  harvester_store.py  llm_tracer.py  orchestrator_checkpoint.py  planner_checkpoint.py  scraper_runtime.py  scraper_sources.py  scraper_store.py  search_searchengine.py  sentiment_store.py
agents/tools/: __init__.py  _registry.py  browser.py  harvest.py  human.py  search.py
docs/: CHATGPT_CHAT.md  FEATURES.md  FUTURE.md  GEMINI_CHAT.md  IDEA.md  MCP.md  ProjectDetail.md  Prompt-task-runner-cto-new.md  VISION.md
docs/agents/: 1_orchestrator.md  2_1_planner.md  2_2_harvester.md  2_3_scraper.md  2_4_1_cleaner_subagents.md  2_4_cleaner.md  2_5_sentiment.md  README.md
docs/testing/: sentiment_gpu_smoke.md
prompts/: __init__.py  manager.py
prompts/raw_prompts/: clean.txt  plan.txt  scrape.txt  (+1 more)
server/: README.md  __init__.py  __main__.py  app.py  config.py  models.py
tests/: test_camoufox.py  test_cleaner_text.py  test_document_store.py  test_harvester_camoufox_agentic.py  test_harvester_plan_normalization.py  test_harvester_quality_filters.py  test_scraper_sources.py  test_scraper_store.py  test_search_tool.py
utils/: __init__.py  bluesky.py  camoufox.py  crawlbase.py  firecrawl.py  hackernews.py  mongodb.py  rss.py  serpapi.py  serper.py  structured_output.py  youtube.py
(+53 files in other folders)
