[project]
name = "sentiment-analyzer-agent"
version = "0.1.0"
description = "End-to-end multi-agent system for sentiment analysis of social media content, built with LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "langchain>=1.2.10",
    "langgraph>=1.0.8",
    "langchain-core>=1.2.17",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=0.3.0",
    "google-genai>=1.63.0",
    "ollama>=0.6.1",
    "crawlbase>=1.0.0",
    "load-dotenv>=0.1.0",
    "fastapi>=0.134.0",
    "uvicorn>=0.41.0",
    "websockets>=15.0.1",
    "camoufox[geoip]>=0.4.11",
    "pytest>=9.0.2",
    "pymongo>=4.12",
    "beautifulsoup4>=4.13",
    "lxml>=5.3",
    "ftfy>=6.3.1",
    "emoji>=2.15.0",
    "contractions>=0.1.73",
    "duckduckgo-search>=2.7.1",
    "langchain-community>=0.1.0",
    "pre-commit>=4.5.1",
    "torch>=2.6.0",
    "transformers>=4.30.0",
    "accelerate>=0.20.0",
    "safetensors>=0.3.0",
    "langchain-copilot @ git+https://github.com/imxitiz/github-copilot-langchain"
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
python-platform = "linux"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["F401","E501"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pyrefly>=0.56.0",
    "uv>=0.10.3",
]
